--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 
 
 .Fields{
-  height: 20vh;
+  height: auto;
   width: 15vw;
   margin-top: 5vh;
   margin-left: 11%;
@@ -55,7 +55,8 @@ body {
   border-radius: 20px;
 }
 .roadmap-container{
-  height: 20vh;
+  height: auto;
+  padding-bottom: 1.5em;
   width: 15vw;
   background-color: white;
   margin-top: 5vh;
@@ -105,7 +106,7 @@ body {
    padding-left: 2em;
   }
   .title span a{
-    padding-left: 6em;
+    padding-left: 4em;
     text-decoration: none;
   }
   #suggest:hover{
